fix: find bottom-most Grok, dynamic right alignment too

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -57,7 +57,6 @@
 
 #cao-floater {
   position: fixed;
-  right: 16px;
   z-index: 999999;
   width: 40px;
   height: 40px;
